# ad-classification-prediction-ctr

./: CLAUDE.md  OVERNIGHT_REPORT.md  README.md  TUNING.md  VALIDATION.md  build_dataset.py  compress_curves.py  curve_config.yaml  dataset.py  dataset_config.yaml  docker-compose.yaml  extract_image_features.py  main.py  pipeline_config.yaml  predict_curves.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
experiments/: drift_attack.py  drift_diagnosis.py  final_recipe.py  harness.py  methods.py  mlp.py  multi_cutoff.py  predict_ensemble.py  run_baseline.py  run_nn.py
pipeline/: PCA_RECON.md  ablate.py  encoding.py  pca_recon.py  rmse_eval.py  run.py  seed_eval.py  temporal_eval.py  visualize.py
