[project]
name = "petit-projet-philippe"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.6.1",
]
